fix z-index

--- a/gmistore/src/styles.css
+++ b/gmistore/src/styles.css
@@ -52,3 +52,6 @@ body {
 .full-width {
   width: 100%;
 }
+.star-container {
+  z-index: 0;
+}
